--- a/jscomp/apidoc/compiler.docdir/J.html
+++ b/jscomp/apidoc/compiler.docdir/J.html
@@ -113,6 +113,9 @@ Javascript IR
 <pre><span id="TYPEbinop"><span class="keyword">type</span> <code class="type"></code>binop</span> = <code class="type"><a href="Js_op.html#TYPEbinop">Js_op.binop</a></code> </pre>
 
 
+<pre><span id="TYPEint_op"><span class="keyword">type</span> <code class="type"></code>int_op</span> = <code class="type"><a href="Js_op.html#TYPEint_op">Js_op.int_op</a></code> </pre>
+
+
 <pre><span id="TYPEkind"><span class="keyword">type</span> <code class="type"></code>kind</span> = <code class="type"><a href="Js_op.html#TYPEkind">Js_op.kind</a></code> </pre>
 
 
