--- a/jscomp/apidoc/compiler.docdir/J_helper.html
+++ b/jscomp/apidoc/compiler.docdir/J_helper.html
@@ -102,6 +102,7 @@ Creator utilities for the <code class="code">J</code> module<br>
 <pre><span id="VALprim"><span class="keyword">val</span> prim</span> : <code class="type">string</code></pre>
 <pre><span id="VALexceptions"><span class="keyword">val</span> exceptions</span> : <code class="type">string</code></pre>
 <pre><span id="VALio"><span class="keyword">val</span> io</span> : <code class="type">string</code></pre>
+<pre><span id="VALoo"><span class="keyword">val</span> oo</span> : <code class="type">string</code></pre>
 <pre><span id="VALsys"><span class="keyword">val</span> sys</span> : <code class="type">string</code></pre>
 <pre><span id="VALlex_parse"><span class="keyword">val</span> lex_parse</span> : <code class="type">string</code></pre>
 <pre><span id="VALobj_runtime"><span class="keyword">val</span> obj_runtime</span> : <code class="type">string</code></pre>
