--- a/jscomp/apidoc/compiler.docdir/Lam_compile_global.html
+++ b/jscomp/apidoc/compiler.docdir/Lam_compile_global.html
@@ -100,7 +100,5 @@ Compile ocaml external module call , e.g <code class="code">List.length</code> t
 <hr width="100%">
 
 <pre><span id="VALget_exp"><span class="keyword">val</span> get_exp</span> : <code class="type"><a href="Lam_compile_env.html#TYPEkey">Lam_compile_env.key</a> -> <a href="J.html#TYPEexpression">J.expression</a></code></pre>
-<pre><span id="VALget_exp_with_args"><span class="keyword">val</span> get_exp_with_args</span> : <code class="type">Ident.t -> int -> Env.t -> <a href="J.html#TYPEexpression">J.expression</a> list -> <a href="J.html#TYPEexpression">J.expression</a></code></pre><div class="info ">
-</div>
-
+<pre><span id="VALget_exp_with_args"><span class="keyword">val</span> get_exp_with_args</span> : <code class="type">Ident.t -> int -> Env.t -> <a href="J.html#TYPEexpression">J.expression</a> list -> <a href="J.html#TYPEexpression">J.expression</a></code></pre>
 <pre><span id="VALquery_lambda"><span class="keyword">val</span> query_lambda</span> : <code class="type">Ident.t -> Env.t -> Lambda.lambda</code></pre></body></html>
