--- a/jscomp/apidoc/compiler.docdir/Lam_compile_group.html
+++ b/jscomp/apidoc/compiler.docdir/Lam_compile_group.html
@@ -95,8 +95,7 @@
 <h1>Module <a href="type_Lam_compile_group.html">Lam_compile_group</a></h1>
 
 <pre><span class="keyword">module</span> Lam_compile_group: <code class="code">sig</code> <a href="Lam_compile_group.html">..</a> <code class="code">end</code></pre><div class="info module top">
-The entry point: compile and register the hook of function to compile  a lambda to 
-    JS IR<br>
+OCamlscript entry point in the OCaml compiler<br>
 </div>
 <hr width="100%">
 
