--- a/jscomp/apidoc/compiler.docdir/Lam_compile_primitive.html
+++ b/jscomp/apidoc/compiler.docdir/Lam_compile_primitive.html
@@ -95,8 +95,7 @@
 <h1>Module <a href="type_Lam_compile_primitive.html">Lam_compile_primitive</a></h1>
 
 <pre><span class="keyword">module</span> Lam_compile_primitive: <code class="code">sig</code> <a href="Lam_compile_primitive.html">..</a> <code class="code">end</code></pre><div class="info module top">
-The entry point of compile primitives
-    Note it will call <a href="Lam_compile_external_call.html#VALtranslate"><code class="code">Lam_compile_external_call.translate</code></a> for c stubs compilation<br>
+Primitive compilation<br>
 </div>
 <hr width="100%">
 
