--- a/jscomp/apidoc/compiler.docdir/Lam_pass_alpha_with_arity.html
+++ b/jscomp/apidoc/compiler.docdir/Lam_pass_alpha_with_arity.html
@@ -99,9 +99,4 @@ Beta reduction of lambda IR<br>
 </div>
 <hr width="100%">
 
-<pre><span id="VALpropogate_beta_reduce"><span class="keyword">val</span> propogate_beta_reduce</span> : <code class="type"><a href="Lam_stats.html#TYPEmeta">Lam_stats.meta</a> -><br>       Ident.t list -> Lambda.lambda -> Lambda.lambda list -> Lambda.lambda</code></pre><div class="info ">
-refresh all the identifiers, 
-   otherwise the identifier property can not be preserved, 
-   the obvious example is parameter<br>
-</div>
-</body></html>
+<pre><span id="VALpropogate_beta_reduce"><span class="keyword">val</span> propogate_beta_reduce</span> : <code class="type"><a href="Lam_stats.html#TYPEmeta">Lam_stats.meta</a> -><br>       Ident.t list -> Lambda.lambda -> Lambda.lambda list -> Lambda.lambda</code></pre></body></html>
