--- a/jscomp/apidoc/compiler.docdir/Lam_runtime.html
+++ b/jscomp/apidoc/compiler.docdir/Lam_runtime.html
@@ -95,7 +95,7 @@
 <h1>Module <a href="type_Lam_runtime.html">Lam_runtime</a></h1>
 
 <pre><span class="keyword">module</span> Lam_runtime: <code class="code">sig</code> <a href="Lam_runtime.html">..</a> <code class="code">end</code></pre><div class="info module top">
-Pre-define some constants<br>
+Pre-defined runtime function name<br>
 </div>
 <hr width="100%">
 
