--- a/jscomp/apidoc/compiler.docdir/index_types.html
+++ b/jscomp/apidoc/compiler.docdir/index_types.html
@@ -167,6 +167,10 @@ Keep track of which identifiers are aliased
 <td></td></tr>
 <tr><td><a href="Lam_stats.html#TYPEident_tbl">ident_tbl</a> [<a href="Lam_stats.html">Lam_stats</a>]</td>
 <td></td></tr>
+<tr><td><a href="Js_op.html#TYPEint_op">int_op</a> [<a href="Js_op.html">Js_op</a>]</td>
+<td></td></tr>
+<tr><td><a href="J.html#TYPEint_op">int_op</a> [<a href="J.html">J</a>]</td>
+<td></td></tr>
 <tr><td><a href="Js_op.html#TYPEint_or_char">int_or_char</a> [<a href="Js_op.html">Js_op</a>]</td>
 <td></td></tr>
 <tr><td align="left"><br>J</td></tr>
