--- a/jscomp/apidoc/compiler.docdir/index_values.html
+++ b/jscomp/apidoc/compiler.docdir/index_values.html
@@ -406,9 +406,7 @@ same as <code class="code">List.fold_left</code>.
 <tr><td><a href="Lam_compile_global.html#VALget_exp">get_exp</a> [<a href="Lam_compile_global.html">Lam_compile_global</a>]</td>
 <td></td></tr>
 <tr><td><a href="Lam_compile_global.html#VALget_exp_with_args">get_exp_with_args</a> [<a href="Lam_compile_global.html">Lam_compile_global</a>]</td>
-<td><div class="info">
-</div>
-</td></tr>
+<td></td></tr>
 <tr><td><a href="Js_fun_env.html#VALget_length">get_length</a> [<a href="Js_fun_env.html">Js_fun_env</a>]</td>
 <td></td></tr>
 <tr><td><a href="Js_fun_env.html#VALget_lexical_scope">get_lexical_scope</a> [<a href="Js_fun_env.html">Js_fun_env</a>]</td>
@@ -420,11 +418,7 @@ same as <code class="code">List.fold_left</code>.
 <tr><td><a href="Type_util.html#VALget_name">get_name</a> [<a href="Type_util.html">Type_util</a>]</td>
 <td></td></tr>
 <tr><td><a href="Lam_compile_env.html#VALget_requried_modules">get_requried_modules</a> [<a href="Lam_compile_env.html">Lam_compile_env</a>]</td>
-<td><div class="info">
-The second argument is mostly from <code class="code">runtime</code> modules 
-    will change the input <code class="code">hard_dependencies</code>
-</div>
-</td></tr>
+<td></td></tr>
 <tr><td><a href="Js_fun_env.html#VALget_unused">get_unused</a> [<a href="Js_fun_env.html">Js_fun_env</a>]</td>
 <td></td></tr>
 <tr><td><a href="Ext_pp.html#VALgroup">group</a> [<a href="Ext_pp.html">Ext_pp</a>]</td>
@@ -647,6 +641,8 @@ TODO Change the module name, this code is not really an extension of the standar
 <td></td></tr>
 <tr><td><a href="Js_output.html#VALof_stmt">of_stmt</a> [<a href="Js_output.html">Js_output</a>]</td>
 <td></td></tr>
+<tr><td><a href="J_helper.html#VALoo">oo</a> [<a href="J_helper.html">J_helper</a>]</td>
+<td></td></tr>
 <tr><td><a href="Js_op_util.html#VALop_prec">op_prec</a> [<a href="Js_op_util.html">Js_op_util</a>]</td>
 <td></td></tr>
 <tr><td><a href="Js_op_util.html#VALop_str">op_str</a> [<a href="Js_op_util.html">Js_op_util</a>]</td>
@@ -685,12 +681,7 @@ TODO Change the module name, this code is not really an extension of the standar
 <tr><td><a href="Js_pass_flatten.html#VALprogram">program</a> [<a href="Js_pass_flatten.html">Js_pass_flatten</a>]</td>
 <td></td></tr>
 <tr><td><a href="Lam_pass_alpha_with_arity.html#VALpropogate_beta_reduce">propogate_beta_reduce</a> [<a href="Lam_pass_alpha_with_arity.html">Lam_pass_alpha_with_arity</a>]</td>
-<td><div class="info">
-refresh all the identifiers, 
-   otherwise the identifier property can not be preserved, 
-   the obvious example is parameter
-</div>
-</td></tr>
+<td></td></tr>
 <tr><td align="left"><br>Q</td></tr>
 <tr><td><a href="Type_util.html#VALquery">query</a> [<a href="Type_util.html">Type_util</a>]</td>
 <td></td></tr>
@@ -868,12 +859,7 @@ When in ES6 mode, we can use Symbol to guarantee its uniquess,
 <tr><td><a href="Lam_compile_primitive.html#VALtranslate">translate</a> [<a href="Lam_compile_primitive.html">Lam_compile_primitive</a>]</td>
 <td></td></tr>
 <tr><td><a href="Lam_compile_external_call.html#VALtranslate">translate</a> [<a href="Lam_compile_external_call.html">Lam_compile_external_call</a>]</td>
-<td><div class="info">
-TODO: document supported attributes
-    Attributes starting with `js` are reserved
-    examples: "js.splice"
-</div>
-</td></tr>
+<td></td></tr>
 <tr><td><a href="Lam_compile_const.html#VALtranslate">translate</a> [<a href="Lam_compile_const.html">Lam_compile_const</a>]</td>
 <td></td></tr>
 <tr><td><a href="Lam_pass_unused_params.html#VALtranslate_unsed_params">translate_unsed_params</a> [<a href="Lam_pass_unused_params.html">Lam_pass_unused_params</a>]</td>
