--- a/jscomp/apidoc/compiler.docdir/type_J_helper.html
+++ b/jscomp/apidoc/compiler.docdir/type_J_helper.html
@@ -87,6 +87,7 @@
 &nbsp;&nbsp;<span class="keyword">val</span>&nbsp;prim&nbsp;:&nbsp;string<br>
 &nbsp;&nbsp;<span class="keyword">val</span>&nbsp;exceptions&nbsp;:&nbsp;string<br>
 &nbsp;&nbsp;<span class="keyword">val</span>&nbsp;io&nbsp;:&nbsp;string<br>
+&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;oo&nbsp;:&nbsp;string<br>
 &nbsp;&nbsp;<span class="keyword">val</span>&nbsp;sys&nbsp;:&nbsp;string<br>
 &nbsp;&nbsp;<span class="keyword">val</span>&nbsp;lex_parse&nbsp;:&nbsp;string<br>
 &nbsp;&nbsp;<span class="keyword">val</span>&nbsp;obj_runtime&nbsp;:&nbsp;string<br>
