--- a/jscomp/apidoc/compiler.docdir/Parsetree_util.html
+++ b/jscomp/apidoc/compiler.docdir/Parsetree_util.html
@@ -94,11 +94,7 @@
 </div>
 <h1>Module <a href="type_Parsetree_util.html">Parsetree_util</a></h1>
 
-<pre><span class="keyword">module</span> Parsetree_util: <code class="code">sig</code> <a href="Parsetree_util.html">..</a> <code class="code">end</code></pre><div class="info module top">
-A utility module used when destructuring parsetree attributes, used for 
-    compiling FFI code<br>
-</div>
-<hr width="100%">
+<pre><span class="keyword">module</span> Parsetree_util: <code class="code">sig</code> <a href="Parsetree_util.html">..</a> <code class="code">end</code></pre><hr width="100%">
 
 <pre><span id="VALis_single_string"><span class="keyword">val</span> is_single_string</span> : <code class="type">Parsetree.payload -> string option</code></pre>
 <pre><span id="VALis_string_or_strings"><span class="keyword">val</span> is_string_or_strings</span> : <code class="type">Parsetree.payload -> [ `None | `Single of string | `Some of string list ]</code></pre></body></html>
