--- a/jscomp/apidoc/compiler.docdir/index.html
+++ b/jscomp/apidoc/compiler.docdir/index.html
@@ -276,20 +276,15 @@ Compile lambda constant to JS
 </div>
 </td></tr>
 <tr><td class="module"><a href="Lam_compile_defs.html">Lam_compile_defs</a></td><td><div class="info">
-some types defined in this module to 
-    help avoiding generating unnecessary symbols 
-    (generating too many symbols will make the output code unreadable)
+Type defintion to keep track of compilation state
 </div>
 </td></tr>
 <tr><td class="module"><a href="Lam_compile_env.html">Lam_compile_env</a></td><td><div class="info">
-the boolean is expand or not
-        when it's passed as module, it should be expanded, 
-        otherwise for alias, <code class="code">include Array</code>, it's okay to return an identifier
-        TODO: be more clear about its concept
+Helper for global Ocaml module index into meaningful names
 </div>
 </td></tr>
 <tr><td class="module"><a href="Lam_compile_external_call.html">Lam_compile_external_call</a></td><td><div class="info">
-Compile ocaml external  function call to JS IR, this module define how FFI via `external` works with attributes, note it will route to <a href="Lam_compile_global.html"><code class="code">Lam_compile_global</code></a> for compiling normal functions without attributes.
+Compile ocaml external function call to JS IR.
 </div>
 </td></tr>
 <tr><td class="module"><a href="Lam_compile_global.html">Lam_compile_global</a></td><td><div class="info">
@@ -297,13 +292,11 @@ Compile ocaml external module call , e.g <code class="code">List.length</code> t
 </div>
 </td></tr>
 <tr><td class="module"><a href="Lam_compile_group.html">Lam_compile_group</a></td><td><div class="info">
-The entry point: compile and register the hook of function to compile  a lambda to 
-    JS IR
+OCamlscript entry point in the OCaml compiler
 </div>
 </td></tr>
 <tr><td class="module"><a href="Lam_compile_primitive.html">Lam_compile_primitive</a></td><td><div class="info">
-The entry point of compile primitives
-    Note it will call <a href="Lam_compile_external_call.html#VALtranslate"><code class="code">Lam_compile_external_call.translate</code></a> for c stubs compilation
+Primitive compilation
 </div>
 </td></tr>
 <tr><td class="module"><a href="Lam_compile_util.html">Lam_compile_util</a></td><td><div class="info">
@@ -351,8 +344,7 @@ This pass would do beta reduction, and dead code elimination (adapted from compi
 </div>
 </td></tr>
 <tr><td class="module"><a href="Lam_pass_remove_alias.html">Lam_pass_remove_alias</a></td><td><div class="info">
-One way:  guarantee that all global aliases *would be removed* ,
-    it will not be aliased 
+Keep track of the global module Aliases
 </div>
 </td></tr>
 <tr><td class="module"><a href="Lam_pass_unused_params.html">Lam_pass_unused_params</a></td><td><div class="info">
@@ -360,7 +352,7 @@ A pass to mark all unused params
 </div>
 </td></tr>
 <tr><td class="module"><a href="Lam_runtime.html">Lam_runtime</a></td><td><div class="info">
-Pre-define some constants
+Pre-defined runtime function name
 </div>
 </td></tr>
 <tr><td class="module"><a href="Lam_stats.html">Lam_stats</a></td><td><div class="info">
@@ -375,11 +367,7 @@ Utilities for lambda analysis
 No side effect, but it might depend on data store
 </div>
 </td></tr>
-<tr><td class="module"><a href="Parsetree_util.html">Parsetree_util</a></td><td><div class="info">
-A utility module used when destructuring parsetree attributes, used for 
-    compiling FFI code
-</div>
-</td></tr>
+<tr><td class="module"><a href="Parsetree_util.html">Parsetree_util</a></td><td></td></tr>
 <tr><td class="module"><a href="String_map.html">String_map</a></td><td></td></tr>
 <tr><td class="module"><a href="String_set.html">String_set</a></td><td></td></tr>
 <tr><td class="module"><a href="Type_util.html">Type_util</a></td><td><div class="info">
