--- a/jscomp/apidoc/compiler.docdir/index_methods.html
+++ b/jscomp/apidoc/compiler.docdir/index_methods.html
@@ -202,6 +202,10 @@
 <td></td></tr>
 <tr><td><a href="Js_fold.fold-c.html#METHODint">int</a> [<a href="Js_fold.fold-c.html">Js_fold.fold</a>]</td>
 <td></td></tr>
+<tr><td><a href="Js_map.map-c.html#METHODint_op">int_op</a> [<a href="Js_map.map-c.html">Js_map.map</a>]</td>
+<td></td></tr>
+<tr><td><a href="Js_fold.fold-c.html#METHODint_op">int_op</a> [<a href="Js_fold.fold-c.html">Js_fold.fold</a>]</td>
+<td></td></tr>
 <tr><td align="left"><br>K</td></tr>
 <tr><td><a href="Js_map.map-c.html#METHODkind">kind</a> [<a href="Js_map.map-c.html">Js_map.map</a>]</td>
 <td></td></tr>
