--- a/js-demo/index.html
+++ b/js-demo/index.html
@@ -91,11 +91,16 @@ render (
         <textarea id="jscode#1" style="background-color: #008803">
 // Generated CODE, PLEASE EDIT WITH CARE
 "use strict";
-var React = require("react");
 var ReactDom = require("react-dom");
+var React = require("react");
 
 function fib(n) {
-  return 1 < (-1 + n >>> 0) ? fib(n - 1) + fib(n - 2) : 1;
+  if (1 < (-1 + n >>> 0)) {
+    return fib(n - 1) + fib(n - 2);
+  }
+  else {
+    return 1;
+  }
 }
 
 function sum(n) {
@@ -107,11 +112,16 @@ function sum(n) {
 }
 
 function map(f, param) {
-  return param ? [
+  if (param) {
+    return [
             /* Cons */0,
             f(param[1]),
             map(f, param[2])
-          ] : /* Nil */0;
+          ];
+  }
+  else {
+    return /* Nil */0;
+  }
 }
 
 function test_curry(x, y) {
@@ -136,7 +146,6 @@ exports.map = map;
 exports.test_curry = test_curry;
 exports.f = f;
 /*  Not a pure module */
-
 </textarea>
     </div>
 </div>
