add dead code elimination support in the playground

--- a/js-demo/index.html
+++ b/js-demo/index.html
@@ -61,10 +61,10 @@ let () = print "hello world"
 
     <div style="width:50%; float:right;  display: inline">
         <form class="form repl-toolbar">
-            <!--<label for="option-non-export">-->
-                <!--<input id="option-non-export" type="checkbox">-->
-                <!--Dead Code Elimination-->
-            <!--</label>-->
+            <label for="option-non-export">
+                <input id="option-non-export" type="checkbox">
+                Shake
+            </label>
             <label style="float:right" >
                 <input id="option-eval" type="checkbox" checked>
                 Eval
